# fair-bolts

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
fair_bolts/: __init__.py
fair_bolts/datamodules/: adult_datamodule.py  base_datamodule.py  celeba_datamodule.py  cmnist_datamodule.py  compas_datamodule.py  tabular_datamodule.py  vision_datamodule.py
fair_bolts/datasets/: ethicml_datasets.py
fair_bolts/metrics/: accuracy.py  accuracy_per_sens.py  classfication.py
fair_bolts/models/: erm_baseline.py  laftr_baseline.py
tests/: datamodules_test.py  model_test.py
tests/metrics/classification/: accuracy_per_sens_test.py
