[tool.poetry]
name = "fair-bolts"
version = "0.1.0"
description = "PyTorch-Lightning Bolts for Fair Machine Learning"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning-bolts = "^0.3.0"
pal-bolts = {git="https://github.com/predictive-analytics-lab/pal-bolts.git", branch="test-metric"}
torchvision = "^0.9"
EthicML = "^0.2.0"
torch = "^1.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pydocstyle = "^5.1.1"
pre-commit = "^2.10.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
