[tool.poetry]
name = "fair-bolts"
version = "0.1.0"
description = "PyTorch-Lightning Bolts for Fair Machine Learning"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
include = ["fair_bolts/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
lightning-bolts = {git = "https://github.com/PyTorchLightning/lightning-bolts.git", branch="master", allow-prereleases=true}
pal-bolts = {git="https://github.com/predictive-analytics-lab/pal-bolts.git", branch="main"}
torchvision = "^0.9"
torch = "^1.8"
EthicML = "^0.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pydocstyle = "^5.1.1"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["ethicml.*", "torch.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = [
    "flash.*",
    "git.*",
    "pal_bolts.*",
    "pl_bolts.*",
    "pytorch_lightning.*",
    "scipy.*",
    "torchvision.*",
    "tqdm.*",
    "wandb.*"
]
ignore_missing_imports = true
