[tool.poetry]
name = "fair-bolts"
version = "0.1.0"
description = "PyTorch-Lightning Bolts for Fair Machine Learning"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
include = ["fair_bolts/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
lightning-bolts = {git = "https://github.com/PyTorchLightning/lightning-bolts.git", branch="master", allow-prereleases=true}
pal-bolts = {git="https://github.com/predictive-analytics-lab/pal-bolts.git", branch="main"}
torchvision = "*"
torch = "*"
EthicML = "*"
palkit = "*"
albumentations = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pydocstyle = "*"
pre-commit = "*"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["ethicml.*", "kit.*", "pytest.*", "pytorch_lightning.*", "torch.*", "torchmetrics.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = [
    "albumentations.*",
    "ethicml.*",
    "flash.*",
    "git.*",
    "kit.*",
    "pal_bolts.*",
    "pandas.*",
    "PIL.*",
    "pl_bolts.*",
    "pytest.*",
    "pytorch_lightning.*",
    "scipy.*",
    "sklearn.*",
    "torchmetrics.*",
    "torchvision.*",
    "tqdm.*",
    "wandb.*"
]
ignore_missing_imports = true
